tests/src/frontend/typechecking/invalid/infer_frozen_met_2.sk
class Tester() {
  fun foo<T: frozen, U: Array<T>>(T): void {
    void
  }
}

fun test(): void {
  Tester().foo(mutable Array[0])
}
